--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,14 +1,41 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>CFAI</title>
+  <title>CFIS</title>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
+
+  <!-- Latest compiled and minified CSS -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+
+  <!-- Optional theme -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+
+  <!-- Latest compiled and minified JavaScript -->
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 </head>
 <body>
+<%= render "layouts/header"%>
+<div class="container">
+
+<% if !user_signed_in? %>
+    <p class="sign_in"><%= link_to "Login", new_user_session_path %></p>
+<% end %>
+<% if user_signed_in? %>
+    <div class="buttons">
+      <button class="button"><%= link_to "New Report", new_report_path %></button>
+      <button class="button"><%= link_to('Logout', destroy_user_session_path, :method => :delete) %></button>
+    </div>
+<% end %>
+<% link_to "Home", root_path %>
+
+<p class="notice"><%= notice %></p>
+<p class="alert"><%= alert %></p>
+
+
 
 <%= yield %>
-
+</div>
 </body>
 </html>
