--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -8,7 +8,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">CFIS</a>
+      <a class="navbar-brand" href="#"><i><i classs="fa fa-circle-o-notch"></i></i>CFIS</a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
