--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -11,10 +11,12 @@
  * file per style scope.
  *
  *= require_tree .
+ *= require font-awesome
  *= require_self
  */
 @import "bootstrap-sprockets";
 @import "bootstrap";
+
 
 table th, td {
     border: 1px solid black;
