login functionality-bootstrap register

--- a/app/views/reports/_form.html.erb
+++ b/app/views/reports/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@report) do |f| %>
+<%= simple_form_for(@report) do |f| %>
   <% if @report.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@report.errors.count, "error") %> prohibited this report from being saved:</h2>
@@ -14,6 +14,7 @@
   <div class="field">
     <%= f.label :report_type_id %><br>
     <%= f.number_field :report_type_id %>
+    <%= f.input :status %>
   </div>
   <div class="field">
     <%= f.label :submitdate %><br>
