--- a/app/views/reports/show.html.erb
+++ b/app/views/reports/show.html.erb
@@ -6,6 +6,11 @@
 </p>
 
 <p>
+  <strong>Status:</strong>
+  <%= @report.status %>
+</p>
+
+<p>
   <strong>Submitdate:</strong>
   <%= @report.submitdate %>
 </p>
