--- a/app/views/credits/_form.html.erb
+++ b/app/views/credits/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@credit) do |f| %>
+<%= simple_form_for(@credit) do |f| %>
   <% if @credit.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@credit.errors.count, "error") %> prohibited this credit from being saved:</h2>
