--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -17,8 +17,10 @@
 
       <ul class="nav navbar-nav navbar-right">
         <% if current_user %>
+            <li><%= link_to "New Report", new_report_path %></li>
         <li><%= link_to "Settings", edit_user_registration_path %></li>
         <li><%= link_to "Log Out", destroy_user_session_path, :method => :delete %></li>
+
 
         <% else %>
         <li><%= link_to "About", about_path %></li>
