--- a/app/views/reports/index.html.erb
+++ b/app/views/reports/index.html.erb
@@ -15,6 +15,7 @@
       <th>Campaignyear</th>
       <th>Ontime</th>
       <th>Signature</th>
+      <th>Status</th>
       <th colspan="3"></th>
     </tr>
   </thead>
